opam-version: "2.0"
maintainer: "Robur <team@robur.coop>"
authors: ["Robur <team@robur.coop>"]
homepage: "https://github.com/robur-coop/immuable"
dev-repo: "git+https://github.com/robur-coop/immuable.git"
bug-reports: "https://github.com/robur-coop/immuable/issues"
license: "MIT"

depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.0.0"}
  "vif"
  "mirage-crypto-rng-mkernel"
  "vifu"
  "progress"
  "flux"
  "carton"
  "art"
  "encore"
  "cattery"
]
build: [
  [make "all"]
]
synopsis: "An unikernel which serve HTTP contents"
pin-depends: [
  [ "mnet.dev"                        "git+https://git.robur.coop/robur/mnet.git#26214790b53df78c00eafc48594cfa01290de0df" ]
  [ "mhttp.dev"                       "git+https://github.com/dinosaure/mhttp.git#0638dd4620757c0a8062afaa75d1546ae206a604" ]
  [ "flux.dev"                        "git+https://github.com/robur-coop/flux.git#7c4d8733596fd54f2f865c32747ba0eebdb964da" ]
  [ "fluxt.dev"                       "git+https://github.com/robur-coop/flux.git#7c4d8733596fd54f2f865c32747ba0eebdb964da" ]
  [ "cattery.dev"                     "git+https://git.robur.coop/robur/cattery.git#7cf6fd84c660484776252e6595b5a252ada23c30" ]
]
