(library
 (name ptt)
 (public_name ptt)
 (modules ptt logic smtp ssmtp mechanism)
 (libraries dns msendmail mrmime colombe))

(library
 (name facteur)
 (public_name ptt.facteur)
 (modules facteur aggregate)
 (libraries ptt cattery dns colombe.emile emile msendmail))

(library
 (name ptt_cli)
 (public_name ptt.cli)
 (modules ptt_cli)
 (libraries mnet-cli ptt ptt.facteur cmdliner))

(library
 (name mailto)
 (public_name ptt.mailto)
 (modules mailto)
 (libraries fmt emile unstrctrd))

(library
 (name mlm)
 (public_name ptt.mlm)
 (modules mlm)
 (libraries
  mirage-ptime
  mirage-crypto-rng
  ptt.mailto
  ptt.bounces
  lru
  uuidm
  hxd.string
  hxd.core
  colombe.emile
  flux
  logs
  mrmime
  prettym
  colombe
  bstr
  jsont))

(library
 (name bounces)
 (public_name ptt.bounces)
 (modules bounces)
 (libraries
  mirage-ptime
  mirage-crypto-rng
  ptt.mailto
  lru
  uuidm
  hxd.string
  hxd.core
  colombe.emile
  flux
  logs
  mrmime
  prettym
  colombe
  bstr
  jsont))

(library
 (name temp)
 (modules temp)
 (public_name ptt.temp)
 (libraries ptt.facteur ptt.bounces))
